--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,8 +2,9 @@ tasks:
   - name: Start Zitadel
     init: |
       docker compose pull
+      export ZITADEL_EXTERNALDOMAIN=$(gp url 8080)
     command: |
-      ZITADEL_EXTERNALDOMAIN=zitadel.$(gp url 8080) ZITADEL_EXTERNALSECURE=true ZITADEL_EXTERNALPORT=443 docker compose -p zitadel up
+      docker compose -p zitadel up
 
 ports:
   - name: Zitadel
