--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,8 @@ services:
       - 'ZITADEL_DATABASE_POSTGRES_ADMIN_USERNAME=postgres'
       - 'ZITADEL_DATABASE_POSTGRES_ADMIN_PASSWORD=postgres'
       - 'ZITADEL_DATABASE_POSTGRES_ADMIN_SSL_MODE=disable'
-      - 'ZITADEL_EXTERNALSECURE=false'
+      - ZITADEL_EXTERNALDOMAIN=${ZITADEL_EXTERNALDOMAIN}
+      - ZITADEL_EXTERNALSECURE=${ZITADEL_EXTERNALSECURE}
     depends_on:
       db:
         condition: 'service_healthy'
